--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -12,13 +12,11 @@
 .sidebar-overlay {
 	position: fixed;
 	top: 0;
+	left: 0;
 	width: 100%;
 	height: 100%;
 	background-color: rgba(0, 0, 0, 0.2);
 	z-index: 999;
-	display: flex;
-	justify-content: center;
-	align-items: center;
 }
 
 .responsive-sidebar {
